--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.1",
     "bulma": "^0.9.0",
     "gatsby": "^2.20.35",
     "gatsby-image": "^2.3.5",
@@ -27,8 +29,10 @@
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
+    "reactstrap": "^8.9.0",
     "uuid": "^7.0.0"
   },
   "keywords": [
