--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-sharp": "^2.4.7",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "mapbox-gl": "^2.2.0",
     "netlify-cms-app": "^2.14.46",
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
@@ -33,6 +34,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
+    "react-map-gl": "^6.1.12",
     "reactstrap": "^8.9.0",
     "uuid": "^7.0.0"
   },
