--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
     "bulma": "^0.9.0",
-    "gatsby": "^2.20.35",
+    "gatsby": "2.20.35",
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-image": "^1.3.1",
     "gatsby-plugin-netlify": "^2.2.4",
