--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,10 +18,11 @@ collections:
             -   file: "src/pages/index.md"
                 label: "Landing Page"
                 name: "index"
+                identifier_field: mainTitle
                 fields:
                     - { label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page" }
                     - { label: Title, name: mainTitle, widget: string }
-                    - {label: About, name: about, widget: object, fields: [ {label: Title, name: title, widget: string}]}
+                    - {label: About, name: about, widget: object, fields: [ {label: Title, name: title, widget: string, required: false}]}
 #                    - { label: Color, name: color, widget: string }
 #                    - { label: Image, name: image, widget: image }
 #                    - { label: Heading, name: heading, widget: string }
