--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,28 +1,28 @@
 backend:
-    name: git-gateway
-    branch: master
-    commit_messages:
-        create: 'Create {{collection}} “{{slug}}”'
-        update: 'Update {{collection}} “{{slug}}”'
-        delete: 'Delete {{collection}} “{{slug}}”'
-        uploadMedia: '[skip ci] Upload “{{path}}”'
-        deleteMedia: '[skip ci] Delete “{{path}}”'
+  name: git-gateway
+  branch: master
+  commit_messages:
+    create: 'Create {{collection}} “{{slug}}”'
+    update: 'Update {{collection}} “{{slug}}”'
+    delete: 'Delete {{collection}} “{{slug}}”'
+    uploadMedia: '[skip ci] Upload “{{path}}”'
+    deleteMedia: '[skip ci] Delete “{{path}}”'
 
 media_folder: src/img
 public_folder: /img
 
 collections:
-    -   name: "pages"
-        label: "Pages"
-        files:
-            -   file: "src/pages/index.md"
-                label: "Landing Page"
-                name: "index"
-                identifier_field: mainTitle
-                fields:
-                    - { label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page" }
-                    - { label: Title, name: mainTitle, widget: string }
-                    - {label: About, name: about, widget: object, fields: [ {label: Title, name: title, widget: string, required: false}]}
+  - name: "pages"
+    label: "Pages"
+    files:
+      - file: "src/pages/index.md"
+        label: "Landing Page"
+        name: "index"
+        identifier_field: mainTitle
+        fields:
+          - { label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page" }
+          - { label: Title, name: mainTitle, widget: string }
+          - { label: About, name: about, widget: object, fields: [ { label: Title, name: aboutTitle, widget: string } ] }
 #                    - { label: Color, name: color, widget: string }
 #                    - { label: Image, name: image, widget: image }
 #                    - { label: Heading, name: heading, widget: string }
